[package]
name = "winnow-parse-error"
description = "Shortcut for using annotate-snippets with winnow"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adam-gaia/winnow-parse-error"
repository = "https://github.com/adam-gaia/winnow-parse-error"
authors = ["Adam Gaia <git@agaia.dev>"]
include = ["src/**/*", "LICENSE-*", "README.md"]

[dependencies]
annotate-snippets = "0.11.5"
winnow = "0.7.10"

[dev-dependencies]
pretty_assertions = "1.4.1"
